--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -7,8 +7,8 @@
 <body>
     <p>Artorias3211</p>
     <p>treinando git 2</p>
-    <p>consegui 3
-    </p>
+    <p>consegui 3</p>
+    <p>Sorvete</p>
     
 </body>
 </html>
