adicionei mais sabores de pizza

--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -10,6 +10,8 @@
     <p>consegui 3</p>
     <p>Sorvete</p>
     <p>pizza de brocóles</p>
-    
+    <p>pizza de peperone</p>
+    <p>pizza de calabresa</p>
+    <p>pizza de chocolate</p>    
 </body>
 </html>
