--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -5,18 +5,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Artorias3211</p>
-    <p>treinando git 2</p>
-    <p>consegui 3</p>
-    <p>Sorvete</p>
-<<<<<<< HEAD
-    <p>pizza de brocóles</p>
-    <p>pizza de peperone</p>
-    <p>pizza de calabresa</p>
-    <p>pizza de chocolate</p>    
-=======
-    <p>aksjdkasd</p>
-    
->>>>>>> main
+    <h1>Pises</h1>
+    <p>França</p>
+    <p>Brasil</p>
+    <p>Angola</p>
+    <p>Africa do Sul</p>
+    <p>Japão</p>
+    <p>Russia</p>
 </body>
 </html>
