--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -5,8 +5,10 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Brasil</p>
-    <p>Japão</p>
+    <p>Brocoles</p>
+    <p>calabreza</p>
+    <p>mussarela</p>
+    <p>peperone</p>
     
 </body>
 </html>
