--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -5,10 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Brocoles</p>
-    <p>calabreza</p>
-    <p>mussarela</p>
-    <p>peperone</p>
+    <p>Brasil</p>
+    <p>Japão</p>
+    <p>Africa</p>
     
 </body>
 </html>
