--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -5,12 +5,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Pises</h1>
-    <p>França</p>
-    <p>Brasil</p>
-    <p>Angola</p>
-    <p>Africa do Sul</p>
-    <p>Japão</p>
-    <p>Russia</p>
+    <p>Brocoles</p>
+    <p>calabreza</p>
+    <p>mussarela</p>
+    <p>peperone</p>
 </body>
 </html>
