adicionei novos sabores

--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -9,5 +9,10 @@
     <p>calabreza</p>
     <p>mussarela</p>
     <p>peperone</p>
+    <p>queijo</p>
+    <p>sardinha</p>
+    <p>kirikiri</p>
+    <p>presunto</p>
+    <p>Frango</p>
 </body>
 </html>
