adicionei pizzas doces

--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -13,6 +13,12 @@
     <p>sardinha</p>
     <p>kirikiri</p>
     <p>presunto</p>
-    <p>Frango</p>
+    <p>Frango</p> <br>
+
+    <h1>pizzas doce</h1>
+
+    <p>Banana e chcolate</p>
+    <p>morango e chocolate</p>
+    <p>uva e nutela</p>
 </body>
 </html>
