adicionei lista não ordenada

--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -5,20 +5,26 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Brocoles</p>
-    <p>calabreza</p>
-    <p>mussarela</p>
-    <p>peperone</p>
-    <p>queijo</p>
-    <p>sardinha</p>
-    <p>kirikiri</p>
-    <p>presunto</p>
-    <p>Frango</p> <br>
 
-    <h1>pizzas doce</h1>
+    <h3>Pizzas salgadas</h3>
+    <ul>
+        <li>Brocoles</li>
+        <li>calabreza</li>
+        <li>mussarela</li>
+        <li>peperone</li>
+        <li>queijo</li>
+        <li>sardinha</li>
+        <li>kirikiri</li>
+        <li>Frango</li>
+    </ul>
 
-    <p>Banana e chcolate</p>
-    <p>morango e chocolate</p>
-    <p>uva e nutela</p>
+    <h3>Pizzas doces</h3>
+    <ul>
+        <li>Banana e chcolate</li>
+        <li>morango e chocolate</li>
+        <li>uva e nutela</li>
+    </ul>
+
+    <footer>&copy Canto da Pizza 2023</footer>
 </body>
 </html>
