adicionei imagens e tag footer

--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -2,29 +2,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cantinho da Pizza</title>
 </head>
 <body>
 
-    <h3>Pizzas salgadas</h3>
-    <ul>
-        <li>Brocoles</li>
-        <li>calabreza</li>
-        <li>mussarela</li>
-        <li>peperone</li>
-        <li>queijo</li>
-        <li>sardinha</li>
-        <li>kirikiri</li>
-        <li>Frango</li>
-    </ul>
+    <header>
+        <h1>Cantinho da Pizza</h1  >
+    </header>
 
-    <h3>Pizzas doces</h3>
-    <ul>
-        <li>Banana e chcolate</li>
-        <li>morango e chocolate</li>
-        <li>uva e nutela</li>
-    </ul>
 
-    <footer>&copy Canto da Pizza 2023</footer>
+    <main>
+
+        <div>            
+            <h1>Cardapio</h1>
+            
+            <h3>Pizzas salgadas</h3>
+            <ul>
+            <li>Brocoles</li>
+            <li>calabreza</li>
+            <li>mussarela</li>
+            <li>peperone</li>
+            <li>queijo</li>
+            <li>sardinha</li>
+            <li>kirikiri</li>
+            <li>Frango</li>
+            </ul>
+        </div>
+
+        <div>
+            <h3>Pizzas doces</h3>
+            <ul>
+            <li>Banana e chcolate <img src="img/pizza de banana.jpg" alt=""></li>
+            <li>morango e chocolate <img src="img/pizza-de-chocolate-com-morango.jpg" alt=""></li>
+            <li>uva e nutela <img src="img/pizza de uva com chocolate.webp" alt=""></li>
+            </ul>
+        </div> 
+
+    </main>
+        
+    <footer>&copy Cantinho da Pizza 2023</footer>
 </body>
 </html>
