adicionei lista de refrigerante

--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -1,8 +1,10 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cantinho da Pizza</title>
+    <link rel="stylesheet" href="pizza.css">
 </head>
 <body>
 
@@ -10,34 +12,42 @@
         <h1>Cantinho da Pizza</h1  >
     </header>
 
-
     <main>
-
         <div>            
             <h1>Cardapio</h1>
             
             <h3>Pizzas salgadas</h3>
             <ul>
-            <li>Brocoles</li>
-            <li>calabreza</li>
-            <li>mussarela</li>
-            <li>peperone</li>
-            <li>queijo</li>
-            <li>sardinha</li>
-            <li>kirikiri</li>
-            <li>Frango</li>
+              <li>Brocoles</li>
+              <li>calabreza</li>
+              <li>mussarela</li>
+              <li>peperone</li>
+              <li>queijo</li>
+              <li>sardinha</li>
+              <li>kirikiri</li>
+              <li>Frango</li>
+            </ul>
+
+            <h3>Refirgerantes</h3>
+            <ul>
+              <li>Coca-cola</li>
+              <li>Guaraná</li>
+              <li>Fanta uva</li>
+              <li>Fanta laranja</li> 
+              <li>Dolly guaraná</li>
+              <li>Dolly uva</li>
+              <li>Dolly coca</li>
             </ul>
         </div>
 
         <div>
             <h3>Pizzas doces</h3>
-            <ul>
-            <li>Banana e chcolate <img src="img/pizza de banana.jpg" alt=""></li>
-            <li>morango e chocolate <img src="img/pizza-de-chocolate-com-morango.jpg" alt=""></li>
-            <li>uva e nutela <img src="img/pizza de uva com chocolate.webp" alt=""></li>
+              <ul>
+              <li>Banana e chcolate <img src="img/pizza de banana.jpg" alt=""></li>
+              <li>morango e chocolate <img src="img/pizza-de-chocolate-com-morango.jpg" alt=""></li>
+              <li>uva e nutela <img src="img/pizza de uva com chocolate.webp" alt=""></li>
             </ul>
         </div> 
-
     </main>
         
     <footer>&copy Cantinho da Pizza 2023</footer>
