--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <header>
-        <h1>Cantinho da Pizza</h1  >
+        <table id="tabela"> 
+            <h1 id="titulo">Cantinho da Pizza</h1>  
+        </table>
     </header>
 
     <main>
@@ -40,13 +42,16 @@
             </ul>
         </div>
 
-        <div>
+        <div id="div2">
             <h3>Pizzas doces</h3>
               <ul>
               <li>Banana e chcolate <img src="img/pizza de banana.jpg" alt=""></li>
               <li>morango e chocolate <img src="img/pizza-de-chocolate-com-morango.jpg" alt=""></li>
               <li>uva e nutela <img src="img/pizza de uva com chocolate.webp" alt=""></li>
             </ul>
+        </div>
+        <div>
+            
         </div> 
     </main>
         
