--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -56,6 +56,17 @@
             <img src="img/pizza de uva com chocolate.webp" alt="" class="pizzasdoces"/>
           </li>
       </div>
+
+      <div>
+        <table border">Combos
+          <tr>
+            <th>s</th><th>s</th><th>s</th><th>s</th>
+          </tr>
+        </table>
+
+
+
+      </div>
     </main>
 
     <footer>&copy Cantinho da Pizza 2023</footer>
