--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -57,10 +57,16 @@
           </li>
       </div>
 
-      <div>
-        <table border">Combos
+      <div id="tableadecombos">
+        <table>Combos
           <tr>
             <th>s</th><th>s</th><th>s</th><th>s</th>
+          </tr>
+          <tr>
+            <th>s</th>
+            <th>s</th>
+            <th>s</th>
+            <th>s</th>
           </tr>
         </table>
 
