--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -60,13 +60,10 @@
       <div id="tableadecombos">
         <table>Combos
           <tr>
-            <th>s</th><th>s</th><th>s</th><th>s</th>
+            <th class="horizonte 1">s</th><th class="horizonte 1">s</th><th class="horizonte 1">s</th><th class="horizonte 1">s</th>
           </tr>
           <tr>
-            <th>s</th>
-            <th>s</th>
-            <th>s</th>
-            <th>s</th>
+            <th>s</th><th>s</th><th>s</th><th>s</th>
           </tr>
         </table>
 
