--- a/Treinando Gitgub/index.html
+++ b/Treinando Gitgub/index.html
@@ -58,18 +58,25 @@
       </div>
 
       <div id="tableadecombos">
-        <table>Combos
+        <table>
           <tr>
-            <th class="horizonte 1">s</th><th class="horizonte 1">s</th><th class="horizonte 1">s</th><th class="horizonte 1">s</th>
+            <h3 class="combos">Combos</h3>
+          </tr>          
+          <tr>
+            <th>s</th><th>s</th><th>s</th><th>s</th>
+          </tr>
+          <tr>
+            <th>s</th><th>s</th><th>s</th><th>s</th>
+          </tr>
+          <tr>
+            <th>s</th><th>s</th><th>s</th><th>s</th>
           </tr>
           <tr>
             <th>s</th><th>s</th><th>s</th><th>s</th>
           </tr>
         </table>
-
-
-
       </div>
+      
     </main>
 
     <footer>&copy Cantinho da Pizza 2023</footer>
